Finish header section, board section, and main section. Also add some images and style.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
     <title>Olympia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,48 +20,54 @@
     </div>
     <div class="board">
         <div class="left-board">
-            <div class="board-title"> Olympia Gods</div>
-            <div>The gods you all know</div>
-            <button class="board-button">Sign up</button>
+            <div class="board-title"> Olympian Gods</div>
+            <div class="description">In ancient Greek religion and mythology, the twelve Olympians are the major deities
+                of the Greek
+                pantheon, commonly
+                considered to be Zeus, Hera, Poseidon, Demeter, Athena, Apollo, Artemis, Ares, Hephaestus, Aphrodite,
+                Hermes, and either
+                Hestia or Dionysus. They were called Olympians because, according to tradition, they resided on Mount
+                Olympus.</div>
+            <button class="board-button">Pray</button>
         </div>
         <div class="right-board">
-            <img href="./images/#">
+            <img class="gods-img" src="./images/olympia-gods.jpg" alt="Olympia Gods">
         </div>
-        <div class="main-content">
-            <div class="main-text">Gods</div>
-            <div class="gods">
-                <div class="god">
-                    <img href="./images/#">
-                    <div class="god-description">Something</div>
-                </div>
-                <div class="god">
-                    <img href="./images/#">
-                    <div class="god-description">Something</div>
-                </div>
-                <div class="god">
-                    <img href="./images/#">
-                    <div class="god-description">Something</div>
-                </div>
-                <div class="god">
-                    <img href="./images/#">
-                    <div class="god-description">Something</div>
-                </div>
+    </div>
+    <div class="main-content">
+        <div class="main-text">Founding Gods</div>
+        <div class="gods">
+            <div class="god1">
+                <div class="god-img"></div>
+                <div class="god-description">Zeus</div>
+            </div>
+            <div class="god2">
+                <div class="god-img"></div>
+                <div class="god-description">Poseindon</div>
+            </div>
+            <div class="god3">
+                <div class="god-img"></div>
+                <div class="god-description">Hades</div>
+            </div>
+            <div class="god4">
+                <div class="god-img"></div>
+                <div class="god-description">Adamas</div>
             </div>
         </div>
-        <div class="sub-main">
-            <div class="long-text">Placeholder</div>
-            <div class="name">Placeholder</div>
+    </div>
+    <div class="sub-main">
+        <div class="long-text">Placeholder</div>
+        <div class="name">Placeholder</div>
+    </div>
+    <div class="pre-footer">
+        <div class="pre-text">
+            <div class="pre-bold"></div>
+            <div class="pre-normal"></div>
         </div>
-        <div class="pre-footer">
-            <div class="pre-text">
-                <div class="pre-bold"></div>
-                <div class="pre-normal"></div>
-            </div>
-            <button class="pre-buton">Sign up</button>
-        </div>
-        <div class="footer">
-            Copyright @ The Odin Project 2022
-        </div>
+        <button class="pre-buton">Sign up</button>
+    </div>
+    <div class="footer">
+        Copyright @ The Odin Project 2022
     </div>
 </body>
 
