Style sub-main, pre-footer, and footer. Finish the project.

--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
         </div>
     </div>
     <div class="sub-main">
-        <div class="long-text">Placeholder</div>
-        <div class="name">Placeholder</div>
+        <div class="long-text">Zeus, the father of the Olympic Gods, turned mid-day into night, hiding the light of the
+            dazzling Sun; and sore fear
+            came upon men.</div>
+        <div class="name">Arhilochud</div>
     </div>
     <div class="pre-footer">
         <div class="pre-text">
-            <div class="pre-bold"></div>
-            <div class="pre-normal"></div>
+            <div class="pre-bold">Action needed! It's time!</div>
+            <div class="pre-normal">Pray to prevent the Ragarnok by clicking the button on the right!</div>
         </div>
-        <button class="pre-buton">Sign up</button>
+        <button class="pre-button">Pray</button>
     </div>
     <div class="footer">
         Copyright @ The Odin Project 2022
