Fix minor bugs in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="pre-footer">
         <div class="pre-text">
             <div class="pre-bold">Action needed! It's time!</div>
-            <div class="pre-normal">Pray to prevent the Ragarnok by clicking the button on the right!</div>
+            <div class="pre-normal">Pray to prevent the Ragnarok by clicking the button on the right!</div>
         </div>
         <button class="pre-button">Pray</button>
     </div>
